--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,9 +14,14 @@
 </header>
 
 <body>
-<input type="text" id="address" />
-<input type="text" id="message" />
+<p>Sender</p>
+<input type="text" id="address_s" />
+<input type="text" id="message_s" />
 <div id="send">send</div>
+<p>Receiver</p>
+<input type="text" id="address_r" />
+<div id="receive">receive</div>
+<ul id="log"></ul>
 </body>
 
 </html>
