Fix bugs at the previous commit and it is operating normally

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,7 @@
 <p>Receiver</p>
 <input type="text" id="address_r" />
 <div id="receive">receive</div>
-<ul id="log"></ul>
+<div id="log"/>
 </body>
 
 </html>
