Make the HTML input part easier to understand from the user

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,11 +15,11 @@
 
 <body>
 <p>Sender</p>
-<input type="text" id="address_s" />
-<input type="text" id="message_s" />
+<input type="text" id="address_s" placeholder="address" />
+<input type="text" id="message_s" placeholder="message"/>
 <div id="send">send</div>
 <p>Receiver</p>
-<input type="text" id="address_r" />
+<input type="text" id="address_r" placeholder="address" />
 <div id="receive">receive</div>
 <p>Logs</p>
 <div id="log"/>
