Make port number specification possible

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,10 +15,12 @@
 
 <body>
 <p>Sender</p>
+<input type="text" id="port_s" placeholder="port number"/>
 <input type="text" id="address_s" placeholder="address"/>
 <input type="text" id="message_s" placeholder="message"/>
 <div id="send">send</div>
 <p>Receiver</p>
+<input type="text" id="port_r" placeholder="port number"/>
 <input type="text" id="address_r" placeholder="address"/>
 <div id="receive">receive</div>
 <p>Logs</p>
